fixed bug that made spacing between pictures to not work

--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -6,6 +6,6 @@
 }
 
 .image-list img {
-    width: 150px;
+    width: 250px;
     grid-row-end: span 2;
 }
